@@ -7,19 +7,22 @@
 
 package org.elasticsearch.xpack.core.security.action.apikey;
 
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.lucene.Lucene;
 import org.elasticsearch.core.Nullable;
+import org.elasticsearch.search.aggregations.Aggregations;
+import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.xcontent.ToXContentObject;
 import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -30,21 +33,28 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
 
     private final long total;
     private final Item[] items;
+    private final @Nullable Aggregations aggregations;
 
     public QueryApiKeyResponse(StreamInput in) throws IOException {
         super(in);
         this.total = in.readLong();
         this.items = in.readArray(Item::new, Item[]::new);
+        if (in.getTransportVersion().onOrAfter(TransportVersions.QUERY_API_KEY_AGGS_ADDED)) {
+            this.aggregations = in.readOptionalWriteable(InternalAggregations::readFrom);
+        } else {
+            this.aggregations = null;
+        }
     }
 
-    public QueryApiKeyResponse(long total, Collection<Item> items) {
+    public QueryApiKeyResponse(long total, Collection<Item> items, @Nullable Aggregations aggregations) {
         this.total = total;
         Objects.requireNonNull(items, "items must be provided");
         this.items = items.toArray(new Item[0]);
+        this.aggregations = aggregations;
     }
 
     public static QueryApiKeyResponse emptyResponse() {
-        return new QueryApiKeyResponse(0, Collections.emptyList());
+        return new QueryApiKeyResponse(0, List.of(), null);
     }
 
     public long getTotal() {
@@ -59,9 +69,16 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
         return items.length;
     }
 
+    public Aggregations getAggregations() {
+        return aggregations;
+    }
+
     @Override
     public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
         builder.startObject().field("total", total).field("count", items.length).array("api_keys", (Object[]) items);
+        if (aggregations != null) {
+            aggregations.toXContent(builder, params);
+        }
         return builder.endObject();
     }
 
@@ -69,6 +86,9 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
     public void writeTo(StreamOutput out) throws IOException {
         out.writeLong(total);
         out.writeArray(items);
+        if (out.getTransportVersion().onOrAfter(TransportVersions.QUERY_API_KEY_AGGS_ADDED)) {
+            out.writeOptionalWriteable((InternalAggregations) aggregations);
+        }
     }
 
     @Override
@@ -76,19 +96,20 @@ public final class QueryApiKeyResponse extends ActionResponse implements ToXCont
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         QueryApiKeyResponse that = (QueryApiKeyResponse) o;
-        return total == that.total && Arrays.equals(items, that.items);
+        return total == that.total && Arrays.equals(items, that.items) && Objects.equals(aggregations, that.aggregations);
     }
 
     @Override
     public int hashCode() {
         int result = Objects.hash(total);
         result = 31 * result + Arrays.hashCode(items);
+        result = 31 * result + Objects.hash(aggregations);
         return result;
     }
 
     @Override
     public String toString() {
-        return "QueryApiKeyResponse{" + "total=" + total + ", items=" + Arrays.toString(items) + '}';
+        return "QueryApiKeyResponse{" + "total=" + total + ", items=" + Arrays.toString(items) + ", aggs=" + aggregations + '}';
     }
 
     public static class Item implements ToXContentObject, Writeable {
